# nav-vla

./: .gitattributes  .gitignore  CITATION.cff  MODEL_WEIGHTS.md  README.md  install.sh
docs/: alpamayo_integration.md  quickstart.md
src/camera_perception_pkg/: package.xml
src/debug_pkg/: package.xml  setup.py
src/debug_pkg/debug_pkg/: hz_monitor_node.py  log.txt  (+4 more)
src/decision_making_pkg/: package.xml  setup.py
src/nav_vla/: package.xml  setup.cfg  setup.py
src/nav_vla/config/: track_rois.json  zone_map.yaml
src/nav_vla/data_actions/session_20260702_215055/: samples.jsonl  summary.json
src/nav_vla/data_actions/session_20260702_215132/: samples.jsonl  summary.json
src/nav_vla/data_actions/session_20260703_100442/: samples.jsonl  summary.json
src/nav_vla/data_actions/session_20260703_100651/: samples.jsonl  summary.json
src/nav_vla/data_actions/session_20260703_101021/: samples.jsonl  summary.json
src/nav_vla/nav_vla/: action_policy_model.py  action_policy_node.py  action_sentence_generator.py  alpamayo_real_server.py  alpamayo_teacher_server.py  car_teleop_node.py  chat_gui_node.py  data_engine_node.py  gz_pose.py  navigator_node.py  obstacle_data_collector_node.py  obstacle_monitor_node.py  obstacle_vla_node.py  policy_node.py  track_roi_editor_node.py  zone_capture_gui_node.py  zone_sequence_test_node.py
src/nav_vla/scripts/: collect_cruise_data.py  collect_lane_change.sh
src/nav_vla/train/: train_action_policy.py  train_obstacle.py  train_stage_a.py
src/nav_vla/train/checkpoints/: action_policy.pt
src/simulation_pkg/: package.xml  setup.py
(+40 files in other folders)
